Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1363734 'Not available' will not be translated in admin.php
   Added logic to translate OVERRIDE_PUBLIC_TEXT if default value
 - Fixed bug 1362876: "all percentages" cannot be translated
 - Implemented PATCH 1155607: Show all days in Month with config
 - Implemented PATCH 1060025: New display_month() function
 - Fixed bug 1360780: register.php does not work
 - Implemented PATCH 1294721: single file for mod date_formats
 - Implemented RFE 1315740: German date styles
 - Fixed bug 1327661: Better german date-formats
 - Fixed bug 1350243: Wrong task order in upgrading.html (convert_passwords.php error)
 - Fixed bug 1359872: Repeat daily error
 - Fixed bug 1358775: Get an error 'Cannot find language file: translations/none.txt
 - Implemented PATCH 1221971: IMAP Authentication
 - Modified upcoming.php to display tasks (see upcoming.php for details)
 - Implemented RFE 1199126: Link Language and Time/Date Formats
 - Fixed bug 1357953: rollover info translation grammar problem
 - Fixed bug 1357943: short description length mismatch
 - Fixed bug 1357946: translation problem on system settings page
 - Fixed bug 1358124: popup: short description length problem
 - Implemented RFE 1357579: Link to 'Home' in trailer menu
 - Fixed bug 1354832: import ical - first edited event multiplies
 - Fixed bug 1356024: event link in Activity log - NOT FOUND error
 - Fixed bug 1356541: ics-import will not correctly handle 'private'-entries
 - Fixed bug 1355655: Task Completed dates not stored properly
 - Fixed bug 1313905: database password can't contain '#' chars
 - Fixed bug 1353588: 4:30pm PST event bug
 - Fixed bug 1353470: Events in day view shown incorrectly - CVS
 - Corrected content type in publish.php and freebusy.php
 - Fixed bug 1353363: publish.php logic error for public user?
 - Added new translation decoding for HTML entities in javascript
 - Fixed bug 1351971: "Delete"-Button won't work properly for reports